<resources>
    <string name="app_name">Ozofilms</string>

    <string name="download_start_error">Failed to start download</string>
    <!--Video Quality-->
    <string name="video_quality">Video Quality</string>
    <string name="standard">Standard</string>
    <string name="download_faster_and_less_storage">Downloads faster and uses Less Storage</string>
    <string name="higher">Higher</string>
    <string name="use_more_storage">Uses more storage</string>
    <!--Video PlayBack-->
    <string name="video_playback">Video Playback</string>
    <string name="mobile_data_selection">Mobile Data Selection</string>
    <!--Storage Location-->
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="storage_location">Storage Location</string>
    <!--Language Option-->
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="marathi">Marathi</string>
    <string name="language">Language</string>
    <!--    Legal-->
    <string name="legal">Legal</string>
    <!--Notification-->
    <string name="notification">Notification</string>
    <string name="allow_notification">Allow Notification</string>
    <!--App Setting-->
    <string name="app_setting">App Setting</string>
    <string name="profile">Profile</string>
    <string name="downloads">Downloads</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Download Network-->
    <string name="download_network">Download Network</string>
    <string name="using_wifi_only">Using Wi-Fi Only</string>
    <string name="using_mobile_data">Using Mobile Data</string>
    <!--Subscription -->
    <string name="introductory_order">Introductory order</string>
    <string name="select_a_package">Select a pacakge</string>
    <string name="offers">Amazing deals, Unlimited Entertainment</string>
    <string name="coupans_code">If you have a coupan code,Click here</string>
    <string name="unlimited_Hd_Stream">Unlimited access and full HD streaming</string>
    <string name="download_offline">Download to watch offline</string>
    <string name="regional_content">Exclusive Multi Regional Content</string>
    <string name="rs">\u20B9</string>
    <string name="strike_text">1. <strike>StrikeThrough</strike> Using strike</string>

    <!--Subscription -->
    <string name="series">Series</string>


    <!--More Option-->
    <string name="subscribe">Subscribe</string>
    <string name="rate_us">Rate Us</string>

    <string name="logout">Logout</string>
    <string name="version">Version</string>
    <!--Downloads-->
    <string name="wi_fi_only">Wi-Fi Only</string>
    <!-- help & suppport -->
    <string name="support_help">Support / Help</string>
    <string name="subscription">Subscription</string>
    <string name="full_name">Full Name:</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="email">Email:</string>
    <string name="message">Message:</string>
    <string name="submit_issue">Submit Issue</string>

    <!--Login-->
    <string name="member_login">MEMBER LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login"> Login</string>
    <string name="remember_me">Remember me?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_account">Don\'t have a account?</string>
    <string name="register_here">REGISTER HERE</string>

    <!--    Register-->
    <string name="register">REGISTER</string>
    <string name="name">Name:</string>
    <string name="emailid">User Id</string>
    <string name="country">Country:</string>
    <string name="ph_no">Ph.No:</string>
    <string name="agree_term_conditon"> I Agree the terms and condition</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signin">Sign in</string>

    <!--Profile-->
    <string name="profile_name">Name <sup>*</sup></string>
    <string name="profile_mobile_no">Mobile No <sup>*</sup></string>
    <string name="profile_email_no_manadatory">Email</string>
    <string name="profile_password">password <sup>*</sup></string>
    <string name="profile_confirm_password">Confirm Password <sup>*</sup></string>
    <string name="register_now">REGISTER NOW</string>

    <!--    <string name=""-->
    <!--Enter Mpin-->
    <string name="enter_pin">ENTER PIN</string>
    <string name="submit">SUBMIT</string>
    <string name="have_an_account">Have an account?</string>
    <string name="update">Update</string>
    <!--    Video Player-->
    <string name="four_more_shoot">Four More Shoot Please!</string>
    <string name="eighteen">18+</string>
    <string name="rates">Rates</string>
    <string name="video_type">Erotic | Suspense | Love</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
    <string name="director">Director</string>
    <string name="episode">Episodes</string>
    <!--   Dashboard -->
    <string name="most_viewed">Most Viewed</string>
    <string name="romantic">Romantic</string>
    <string name="webseries">Web Series</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="favourite">Favourite</string>
    <string name="more">More</string>
    <!--    Serach here-->
    <string name="search">Search Here</string>
    <!--Change PassWord-->
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="userid">Userid</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="r_u_sure_logout_message">Are you sure you want to Logout?</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no_cancel">NO</string>


    <string name="Cancel">Cancel</string>
    <string name="pin">pin</string>
    <string name="forgot_pin">Forgot Pin</string>
    <string name="no_subtitle">There is no subtitle</string>
    <!--  Change Pin  -->
    <string name="old_pin">Old Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="change_pin">Change Pin</string>
    <string name="track_selection_title">Select tracks</string>
    <string name="OTP">Enter OTP</string>
    <string name="season">Season</string>


    <string name="facebook_app_id">321229779184351</string>
    <string name="fb_login_protocol_scheme">fb321229779184351</string>
    <string name="seasons">Seasons</string>
    <string name="most_like">Most like this</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Ott_App</string>
    <string name="ServerError">Server not responding, please try later.</string>
    <string name="NoInternet">Please check your internet connection.</string>
    <string name="AvaliableDownloads">Available in Downloads</string>
    <string name="TryAgain">Try Again !</string>
    <string name="STATE_STOPPED">"The download is stopped for a specified "</string>
    <string name="STATE_DOWNLOADING">The download is currently started.</string>
    <string name="STATE_COMPLETED">The download completed. Available in Downloads.</string>
    <string name="STATE_FAILED">The download failed.</string>
    <string name="STATE_REMOVING">The download is being removed.</string>
    <string name="STATE_RESTARTING">The download will restart after all downloaded data is removed.</string>
    <string name="Logout">Logout successfully</string>
    <string name="enter_old_password">Please enter old password</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="enter_valid_password">Please enter valid password</string>
    <string name="ChangePinSuccess">Change Pin Successfully</string>
    <string name="NoVideo">No Video available</string>
    <string name="enter_otp">Enter OTP</string>


</resources>