<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/home"/>
    <item
        android:id="@+id/explore"
        android:enabled="true"
        android:visible="true"
        android:icon="@drawable/explore"
        android:title="@string/explore"/>
    <item
        android:id="@+id/favourite"
        android:enabled="true"

        android:icon="@drawable/favourite"
        android:title="@string/favourite"/>
    <item
        android:id="@+id/download"
        android:enabled="true"
        android:icon="@drawable/download"
        android:title="@string/downloads"/>
    <item
        android:id="@+id/more"
        android:enabled="true"
        android:icon="@drawable/more_icon"
        android:title="@string/more"/>
</menu>