<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <FrameLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_from_left"
        android:layout_marginTop="100dp"

        android:layout_marginRight="@dimen/margin_from_left">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/oops_logo"></androidx.appcompat.widget.AppCompatImageView>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rectangular"
            android:orientation="vertical">

            <com.example.oops.custom.OTTTextView
                style="@style/TextInCenter"
                android:layout_marginTop="40dp"
                android:text="@string/register"></com.example.oops.custom.OTTTextView>
            <!--Name-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/whitebackgroundrectangular"
                android:layout_marginRight="20dp">
                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                   android:background="@drawable/ic_pink_patch">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_man"></androidx.appcompat.widget.AppCompatImageView>
                </LinearLayout>
                    <com.example.oops.custom.OTTEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
android:layout_marginLeft="15dp"

                android:hint="@string/name"></com.example.oops.custom.OTTEditText>
            </LinearLayout>
            <!--    Email Id:        -->
            <com.example.oops.custom.OTTEditText
                android:id="@+id/editTextEmailId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/whitebackgroundrectangular"
                android:hint="@string/emailid"></com.example.oops.custom.OTTEditText>
            <!--country-->
            <com.example.oops.custom.OTTEditText
                android:id="@+id/editTextCountry"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/whitebackgroundrectangular"
                android:hint="@string/country"></com.example.oops.custom.OTTEditText>

            <!--      Phone Number    -->
            <com.example.oops.custom.OTTEditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/whitebackgroundrectangular"
                android:hint="@string/ph_no"></com.example.oops.custom.OTTEditText>
            <!--           Password-->
            <com.example.oops.custom.OTTEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/whitebackgroundrectangular"
                android:hint="@string/password"></com.example.oops.custom.OTTEditText>


            <com.example.oops.custom.OTTCheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/white"
                android:text="@string/agree_term_conditon"
                android:textColor="@color/white" />


        </LinearLayout>


        <com.example.oops.custom.OTTButton
            android:layout_marginTop="520dp"
            android:layout_width="150dp"
            android:background="@drawable/button_background"
            android:id="@+id/submitIssue"
            android:textColor="@color/white"
           android:layout_gravity="center_horizontal"
                       android:textAllCaps="false"
            android:layout_marginBottom="30dp"
            android:layout_height="50dp"
            android:text="@string/create_account"></com.example.oops.custom.OTTButton>

    </FrameLayout>

    </ScrollView>
</LinearLayout>