<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/white_background_pinkborder"
        android:orientation="vertical">

        <com.example.oops.custom.OTTTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20sdp" />

        <com.example.oops.custom.OTTTextView
            android:id="@+id/textMsg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:minHeight="@dimen/_40sdp"
            android:text="Are you sure to exit"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp">

            <com.example.oops.custom.OTTButton
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Cancel"
                android:textColor="#e82065"
                android:background="@android:color/transparent"/>

            <com.example.oops.custom.OTTButton
                android:id="@+id/ok_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/ok"
                android:textColor="#e82065"
                android:layout_weight="1"
                android:background="@android:color/transparent"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>